# TxGemma-MCP

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  pytest.ini  server.py
.github/workflows/: tests.yml
docs/: FILTERING.md  TESTING.md
scripts/: analyze_tools.py
tests/: conftest.py  test_chat_factory.py  test_config.py  test_executor.py  test_model.py  test_prompts.py  test_server.py  test_tool_factory.py  test_tools.py
txgemma/: __init__.py  chat_factory.py  config.py  executor.py  model.py  prompts.py  tool_factory.py
